001 Rubik's Cube - enlarge font size
specify input class in css

--- a/p/001_Rubik's_Cube/index.html
+++ b/p/001_Rubik's_Cube/index.html
@@ -12,10 +12,10 @@
 	<div id ="cube">
 		<div class=roofpig id="cube2" data-config="base=CROSS"></div>
 	</div>
-	<input type="text" size=1 maxlength=2 id="edg_0" value="23">
-	<input type="text" size=1 maxlength=2 id="edg_1" value="0">
-	<input type="text" size=1 maxlength=2 id="edg_2" value="2">
-	<input type="text" size=1 maxlength=2 id="edg_3" value="6">
+	0: <input type="text" size=1 class="pos" id="edg_0" value="23">
+	1: <input type="text" size=1 class="pos" id="edg_1" value="0">
+	2: <input type="text" size=1 class="pos" id="edg_2" value="2">
+	3: <input type="text" size=1 class="pos" id="edg_3" value="6">
 	<br><br>
 <!--	
 	<input type="text" id="alg" value="L U L">
