001 Rubik's Cube - download jquery
use local jquery lib
comment stage1 related TLE
need to upgrade alg

--- a/p/001_Rubik's_Cube/index.html
+++ b/p/001_Rubik's_Cube/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./styles/main.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="../../lib/jquery-3.4.1.min.js"></script>
 	<script src="./lib/roofpig_and_three.min.js"></script>
 	
 	<script src="./scripts/main.js"></script>
@@ -17,14 +17,18 @@
 	<input type="button" value="random" onclick="input_random()">
 	<br>
 	<input type="button" value="cross" onclick="search_cross()">
+<!--
+	stage1 search TLE need to upgrade alg
 	<input type="button" value="stage1" onclick="search()">
-	
+-->	
 	<br><br>
 	edge<br>
 	00: <input type="text" class="pos" id="edg_0" value="23">
 	01: <input type="text" class="pos" id="edg_1" value="0">
 	02: <input type="text" class="pos" id="edg_2" value="2">
 	03: <input type="text" class="pos" id="edg_3" value="6">
+<!--
+	stage1 search TLE need to upgrade alg
 	<br>
 	04: <input type="text" class="pos" id="edg_4" value="24">
 	05: <input type="text" class="pos" id="edg_5" value="24">
@@ -46,7 +50,7 @@
 	05: <input type="text" class="pos" id="cnr_5" value="24">
 	06: <input type="text" class="pos" id="cnr_6" value="24">
 	07: <input type="text" class="pos" id="cnr_7" value="24">
-	
+-->	
 <!--	
 	<input type="text" id="alg" value="L U L">
 -->	
