--- a/p/006_Lights_Out/index.html
+++ b/p/006_Lights_Out/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Lights Out</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./styles/main.css">
 	<script src="./scripts/main.js"></script>
