--- a/p/001_Rubik's_Cube/index.html
+++ b/p/001_Rubik's_Cube/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="./styles/main.css">
-	<script src="../../lib/jquery-3.4.1.min.js"></script>
+	<script src="./lib/jquery-3.4.1.min.js"></script>
 	<script src="./lib/roofpig_and_three.min.js"></script>
 	
 	<script src="./scripts/main.js"></script>
